Add evaluation RANSAC / real data

--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -681,3 +681,20 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	keywords = {Convergence, Inspection, Iterative algorithms, Iterative closest point algorithm, Iterative methods, Motion estimation, Quaternions, Shape measurement, Solid modeling, Testing},
 	file = {IEEE Xplore Abstract Record:/home/hugop/Zotero/storage/PH5UIAWG/121791.html:text/html;paper_icp.pdf:/home/hugop/Zotero/storage/WUTKQ3T2/paper_icp.pdf:application/pdf},
 }
+
+@inproceedings{lukacs_faithful_1998,
+	location = {Berlin, Heidelberg},
+	title = {Faithful least-squares fitting of spheres, cylinders, cones and tori for reliable segmentation},
+	isbn = {978-3-540-69354-3},
+	doi = {10.1007/BFb0055697},
+	abstract = {This paper addresses a problem arising in the reverse engineering of solid models from depth-maps. We wish to identify and fit surfaces of known type wherever these are a good fit. This paper presents a set of methods for the least-squares fitting of spheres, cylinders, cones and tori to three-dimensional point data. Least-squares fitting of surfaces other planes, even of simple geometric type, has been little studied.},
+	pages = {671--686},
+	booktitle = {Computer Vision — {ECCV}'98},
+	publisher = {Springer},
+	author = {Lukács, Gabor and Martin, Ralph and Marshall, Dave},
+	editor = {Burkhardt, Hans and Neumann, Bernd},
+	date = {1998},
+	langid = {english},
+	keywords = {Base Point, Distance Function, Principal Curvature, Range Image, Reverse Engineering},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/Z9K447MN/Lukács et al. - 1998 - Faithful least-squares fitting of spheres, cylinde.pdf:application/pdf},
+}
