--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -540,13 +540,6 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	file = {Dörner et al. - 2019 - Virtual und Augmented Reality (VRAR) Grundlagen .pdf:/home/hugop/Zotero/storage/3UNK5C6Z/Dörner et al. - 2019 - Virtual und Augmented Reality (VRAR) Grundlagen .pdf:application/pdf},
 }
 
-@article{szeliski_computer_nodate,
-	title = {Computer Vision: Algorithms and Applications, 2nd Edition},
-	author = {Szeliski, Richard},
-	langid = {english},
-	file = {Szeliski - Computer Vision Algorithms and Applications, 2nd .pdf:/home/hugop/Zotero/storage/PHYTJX8L/Szeliski - Computer Vision Algorithms and Applications, 2nd .pdf:application/pdf},
-}
-
 @unpublished{kris_kitani_computer_2017,
 	location = {Carnegie Mellon University Robotics Institute},
 	title = {Computer Vision - Lecture 8.2: Camera Matrix},
@@ -599,7 +592,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	urldate = {2024-06-22},
 	date = {2024-04-18},
 	langid = {english},
-	note = {Page Version {ID}: 1219560976 skipbib:true},
+	note = {Page Version {ID}: 1219560976},
 	file = {Snapshot:/home/hugop/Zotero/storage/BK2WGTK5/Graham_scan.html:text/html},
 }
 
@@ -697,4 +690,76 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {english},
 	keywords = {Base Point, Distance Function, Principal Curvature, Range Image, Reverse Engineering},
 	file = {Full Text PDF:/home/hugop/Zotero/storage/Z9K447MN/Lukács et al. - 1998 - Faithful least-squares fitting of spheres, cylinde.pdf:application/pdf},
+}
+
+@article{shakarji_least-squares_1998,
+	title = {Least-squares fitting algorithms of the {NIST} algorithm testing system},
+	volume = {103},
+	issn = {1044677X},
+	url = {https://nvlpubs.nist.gov/nistpubs/jres/103/6/j36sha.pdf},
+	doi = {10.6028/jres.103.043},
+	pages = {633},
+	number = {6},
+	journaltitle = {Journal of Research of the National Institute of Standards and Technology},
+	shortjournal = {J. Res. Natl. Inst. Stand. Technol.},
+	author = {Shakarji, C.M.},
+	urldate = {2024-07-16},
+	date = {1998-11},
+	langid = {english},
+	file = {Shakarji - 1998 - Least-squares fitting algorithms of the NIST algor.pdf:/home/hugop/Zotero/storage/ARP3J3EC/Shakarji - 1998 - Least-squares fitting algorithms of the NIST algor.pdf:application/pdf},
+}
+
+@online{noauthor_algorithm_nodate,
+	title = {Algorithm Implementation/Geometry/Convex hull/Monotone chain - Wikibooks, open books for an open world},
+	url = {https://en.wikibooks.org/wiki/Algorithm_Implementation/Geometry/Convex_hull/Monotone_chain#C++},
+	urldate = {2024-04-22},
+	langid = {english},
+	file = {Snapshot:/home/hugop/Zotero/storage/Y685B68L/Monotone_chain.html:text/html},
+}
+
+@book{szeliski_computer_2022,
+	location = {Cham},
+	edition = {2nd ed. 2022 edition},
+	title = {Computer Vision: Algorithms and Applications},
+	isbn = {978-3-030-34371-2},
+	shorttitle = {Computer Vision},
+	abstract = {Computer Vision: Algorithms and Applications explores the variety of techniques used to analyze and interpret images. It also describes challenging real-world applications where vision is being successfully used, both in specialized applications such as image search and autonomous navigation, as well as for fun, consumer-level tasks that students can apply to their own personal photos and videos.More than just a source of “recipes,” this exceptionally authoritative and comprehensive textbook/reference takes a scientific approach to the formulation of computer vision problems. These problems are then analyzed using the latest classical and deep learning models and solved using rigorous engineering principles.Topics and features:Structured to support active curricula and project-oriented courses, with tips in the Introduction for using the book in a variety of customized {coursesIncorporates} totally new material on deep learning and applications such as mobile computational photography, autonomous navigation, and augmented {realityPresents} exercises at the end of each chapter with a heavy emphasis on testing algorithms and containing numerous suggestions for small mid-term {projectsIncludes} 1,500 new citations and 200 new figures that cover the tremendous developments from the last {decadeProvides} additional material and more detailed mathematical topics in the Appendices, which cover linear algebra, numerical techniques, estimation theory, datasets, and {softwareSuitable} for an upper-level undergraduate or graduate-level course in computer science or engineering, this textbook focuses on basic techniques that work under real-world conditions and encourages students to push their creative boundaries. Its design and exposition also make it eminently suitable as a unique reference to the fundamental techniques and current research literature in computer vision.},
+	pagetotal = {947},
+	publisher = {Springer},
+	author = {Szeliski, Richard},
+	date = {2022-01-05},
+	file = {Szeliski - Computer Vision Algorithms and Applications, 2nd .pdf:/home/hugop/Zotero/storage/PHYTJX8L/Szeliski - Computer Vision Algorithms and Applications, 2nd .pdf:application/pdf},
+}
+
+@article{samet_deletion_1980,
+	title = {Deletion in two-dimensional quad trees},
+	volume = {23},
+	issn = {0001-0782},
+	url = {https://doi.org/10.1145/359038.359043},
+	doi = {10.1145/359038.359043},
+	abstract = {An algorithm for deletion in two-dimensional quad trees that handles the problem in a manner analogous to deletion in binary search trees is presented. The algorithm is compared with a proposed method for deletion which reinserts all of the nodes in the subtrees of the deleted node. The objective of the new algorithm is to reduce the number of nodes that need to be reinserted. Analysis for complete quad trees shows that the number of nodes requiring reinsertion is reduced to as low as 2/9 of that required by the old algorithm. Simulation tests verify this result. Reduction of the number of insertions has a similar effect on the number of comparison operations. In addition, the total path length (and balance) of the resulting tree is observed to remain constant or increase slightly when the new algorithm for deletion is used, whereas use of the old algorithm results in a significant increase in the total path length for large trees.},
+	pages = {703--710},
+	number = {12},
+	journaltitle = {Commun. {ACM}},
+	author = {Samet, Hanan},
+	urldate = {2024-07-22},
+	date = {1980-12-01},
+	file = {Full Text:/home/hugop/Zotero/storage/ZGGFH787/Samet - 1980 - Deletion in two-dimensional quad trees.pdf:application/pdf},
+}
+
+@online{noauthor_pixel_nodate,
+	title = {Pixel phone hardware tech specs - Pixel Phone Help},
+	url = {https://support.google.com/pixelphone/answer/7158570?hl=en#zippy=%2Cpixel},
+	urldate = {2024-07-23},
+	file = {Pixel phone hardware tech specs - Pixel Phone Help:/home/hugop/Zotero/storage/BMFGHHUV/7158570.html:text/html},
+}
+
+@online{claburn_google_nodate,
+	title = {Google introduces Pixel 7 phones, related watch and Pixel},
+	url = {https://www.theregister.com/2022/10/06/made_by_google_pixel_phones/},
+	abstract = {This and wearables fortified with machine learning to serve you, human},
+	author = {Claburn, Thomas},
+	urldate = {2024-07-23},
+	langid = {english},
+	file = {Snapshot:/home/hugop/Zotero/storage/55A3Z29Y/made_by_google_pixel_phones.html:text/html},
 }
