Fix \footfullcite appearing in bib

--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -594,6 +594,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {english},
 	note = {Page Version {ID}: 1219560976},
 	file = {Snapshot:/home/hugop/Zotero/storage/BK2WGTK5/Graham_scan.html:text/html},
+	options   = {skipbib=true}
 }
 
 @online{noauthor_convex_2013,
@@ -606,6 +607,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {american},
 	note = {Section: {DSA}},
 	file = {Snapshot:/home/hugop/Zotero/storage/7NCLM8FF/convex-hull-using-graham-scan.html:text/html},
+	options   = {skipbib=true}
 }
 
 @software{daniel_girardeau-montaut_cloudcompare_nodate,
@@ -715,6 +717,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	urldate = {2024-04-22},
 	langid = {english},
 	file = {Snapshot:/home/hugop/Zotero/storage/Y685B68L/Monotone_chain.html:text/html},
+	options   = {skipbib=true}
 }
 
 @book{szeliski_computer_2022,
@@ -752,6 +755,8 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	url = {https://support.google.com/pixelphone/answer/7158570?hl=en#zippy=%2Cpixel},
 	urldate = {2024-07-23},
 	file = {Pixel phone hardware tech specs - Pixel Phone Help:/home/hugop/Zotero/storage/BMFGHHUV/7158570.html:text/html},
+    options   = {skipbib=true}
+
 }
 
 @online{claburn_google_nodate,
@@ -762,4 +767,5 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	urldate = {2024-07-23},
 	langid = {english},
 	file = {Snapshot:/home/hugop/Zotero/storage/55A3Z29Y/made_by_google_pixel_phones.html:text/html},
+	options   = {skipbib=true}
 }
