--- a/ba/defs.tex
+++ b/ba/defs.tex
@@ -40,9 +40,9 @@
 \usepackage{geometry}
 
 % Standardpaket für Lokalisation, siehe Option "ngerman" oben
-\usepackage{babel}
+\usepackage[english, german]{babel}
 % Laden von optimierten Trennmustern
-\babelprovide[hyphenrules=ngerman-x-latest]{ngerman}
+%\babelprovide[hyphenrules=ngerman-x-latest]{ngerman}
 
 % Standardpaket für mathematische Zusatzfunktionen; wenn Sie keine
 % mathematischen Formeln brauchen, können Sie diese Zeile löschen
